--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
     "require": {
         "php": ">=5.3.0",
         "roundcube/plugin-installer": ">=0.1.3"
+    },
+    "extra": {
+        "roundcube": {
+             "min-version": "1.0-rc"
+        }
     }
 }
