--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "roundcube/chbox_plugin",
+    "name": "roundcube/chbox",
     "type": "roundcube-plugin",
     "description": "This chbox plugin adds the convenient functionality of making single and/or multiple selections from a number of emails in Roundcube message list.",
     "license": "GNU GPLv3+",
