--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "extra": {
         "roundcube": {
-             "min-version": "1.0-rc"
+             "min-version": "0.9.5",
+             "max-version": "1.0-rc"
         }
     }
 }
