--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,11 @@
             "email": "dns.sobol@gmail.com",
             "role": "Author"
         },
+        {
+            "name": "Manuel Delgado",
+            "email": "manuel.delgado@ucr.ac.cr",
+            "role": "Developer"
+        },
 	{
             "name": "Artur Petrov",
             "email": "admin@gtn18.ru",
